<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Twitter</string>
    <string name="home_timeline">Home</string>
    <string name="login_label">Connect To Twitter</string>
    <string name="tweet">Tweet</string>
    <string name="hint_compose">What\'s happening?</string>
    <string name="message_to">Message to: </string>

    <string name="user_name">User Name</string>
    <string name="screen_name">Screen Name</string>
    <string name="tweet_body">Tweet Body</string>
    <string name="relative_time">Time</string>
    <string name="tag">Tag</string>
    <string name="char_count">140</string>
    <string name="reply">Reply</string>
    <string name="no_internet">No Internet connection available</string>
    <string name="profile">Profile</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="in_reply">In reply to </string>
    <string name="search_twitter">Search Twitter…</string>
    <string name="message">Message</string>
    <string name="send_message">Send Message</string>
</resources>
