<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_margin="7dp"
        tools:src="@drawable/ic_launcher" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/ivProfileImage"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:textColor="@color/defaultText"
            />

        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/screen_name"
            android:layout_below="@+id/tvUserName"
            android:textColor="@color/defaultText"
            android:layout_marginTop="3dp" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            tools:text="@string/tag"
            android:textColor="@color/defaultText"
            android:layout_below="@+id/tvScreenName"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />
    </RelativeLayout>
</RelativeLayout>