<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="user" type="com.codepath.twitter.models.User"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivProfileBackground"
        android:adjustViewBounds="true"
        app:imageUrl="@{user.profileBackgroundUrl}"/>
    />
    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="85dp"
        tools:src="@mipmap/default_profile"
        app:imageUrl="@{user.profileImageUrl}"/>

    <LinearLayout
        android:id="@+id/llScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivProfileImage"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.name}"
            android:textColor="@color/defaultText"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/screen_name"
            android:textColor="@color/screenNameColor"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{user.tagLine}"
            android:textColor="@color/defaultText"
            android:autoLink="all"
            android:textColorLink="@color/colorAccent"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/llFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llScreenName"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"/>

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <View
            android:id="@+id/primerdivisor1"
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_below="@id/llFollowers"
            android:background="#AAB8C2" />



        <ProgressBar android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/pbTweets"
            style="?android:attr/progressBarStyleLarge"
            android:indeterminateTint="@color/colorAccent"
            android:layout_below="@+id/primerdivisor1"
            android:layout_centerInParent="true"
        />


        <FrameLayout
        android:id="@+id/flContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pbTweets"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        />
    </RelativeLayout>
</layout>